--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World, It's me"
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>repo</title>
+</head>
+<body>
+
+<h1>repo</h1>
+<p>"Hello World, It's me"</p>
+
+</body>
+</html>
